--- a/source/Firebase/MLKit.Common/MLKit.Common.targets
+++ b/source/Firebase/MLKit.Common/MLKit.Common.targets
@@ -4,10 +4,16 @@
 		<_FirebaseMLKitCommonAssemblyName>Firebase.MLKit.Common, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseMLKitCommonAssemblyName>
 		<_FirebaseMLCommonItemsFolder>FMLCmmn-0.19.0</_FirebaseMLCommonItemsFolder>
 		<_FirebaseMLCommonSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLCommonItemsFolder)\Frameworks\</_FirebaseMLCommonSDKBaseFolder>
+		<_TensorFlowLiteCItemsFolder>TnsrFlwLtC-1.14.0</_TensorFlowLiteCItemsFolder>
+		<_TensorFlowLiteCSDKBaseFolder>$(XamarinBuildDownloadDir)$(_TensorFlowLiteCItemsFolder)\TensorFlowLiteC-1.14.0\Frameworks\</_TensorFlowLiteCSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseMLCommonItemsFolder)">
 			<Url>https://dl.google.com/dl/cpdc/6af4e180ffe8fd16/FirebaseMLCommon-0.19.0.tar.gz</Url>
+			<Kind>Tgz</Kind>
+		</XamarinBuildDownload>
+		<XamarinBuildDownload Include="$(_TensorFlowLiteCItemsFolder)">
+			<Url>https://dl.google.com/dl/cpdc/0e27bc28472e2519/TensorFlowLiteC-1.14.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
 		<XamarinBuildRestoreResources Include="_FMLCmmnDownloadedItems" />
@@ -21,6 +27,14 @@
 				<ForceLoad>True</ForceLoad>
 				<LinkerFlags>-ObjC -lc++ -lsqlite3 -lz</LinkerFlags>
 				<Frameworks>Foundation LocalAuthentication QuartzCore Security</Frameworks>
+			</NativeReference>
+			
+			<!-- From https://dl.google.com/dl/cpdc/0e27bc28472e2519/TensorFlowLiteC-1.14.0.tar.gz -->
+			<NativeReference Include="$(_TensorFlowLiteCSDKBaseFolder)TensorFlowLiteC.framework">
+				<Kind>Framework</Kind>
+				<SmartLink>True</SmartLink>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-lc++</LinkerFlags>
 			</NativeReference>
 		</ItemGroup>
 	</Target>
