--- a/samples/Firebase/MLKit.NaturalLanguage/NaturalLanguageSample/GoogleService-Info.plist
+++ b/samples/Firebase/MLKit.NaturalLanguage/NaturalLanguageSample/GoogleService-Info.plist
@@ -3,9 +3,9 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>542613023302-gi0ba73iqkefmuvs492eth8h2b1b3uge.apps.googleusercontent.com</string>
+	<string>542613023302-6nupmo8eor2t78hlp8470vuj6v9uehgh.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.542613023302-gi0ba73iqkefmuvs492eth8h2b1b3uge</string>
+	<string>com.googleusercontent.apps.542613023302-6nupmo8eor2t78hlp8470vuj6v9uehgh</string>
 	<key>API_KEY</key>
 	<string>AIzaSyD36zdfPJDkRValUgcv2JKxM0TShl6a1go</string>
 	<key>GCM_SENDER_ID</key>
@@ -13,7 +13,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.xamarin.firebase.ios.languageidsample</string>
+	<string>com.xamarin.firebase.ios.naturallanguagesample</string>
 	<key>PROJECT_ID</key>
 	<string>xamarinfirebase-67094</string>
 	<key>STORAGE_BUCKET</key>
@@ -29,7 +29,7 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:542613023302:ios:a775ee0d976a6c18cbf847</string>
+	<string>1:542613023302:ios:c222071ff210f118cbf847</string>
 	<key>DATABASE_URL</key>
 	<string>https://xamarinfirebase-67094.firebaseio.com</string>
 </dict>
