--- a/source/Firebase/MLKit.NaturalLanguage/MLKit.NaturalLanguage.targets
+++ b/source/Firebase/MLKit.NaturalLanguage/MLKit.NaturalLanguage.targets
@@ -2,90 +2,84 @@
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
 	<PropertyGroup>
 		<_FirebaseMLKitNaturalLanguageAssemblyName>Firebase.MLKit.NaturalLanguage, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</_FirebaseMLKitNaturalLanguageAssemblyName>
-		<_FirebaseMLKitNaturalLanguageVersion>0.16.3</_FirebaseMLKitNaturalLanguageVersion>
-		
+		<_FirebaseMLKitNaturalLanguageVersion>0.17.0</_FirebaseMLKitNaturalLanguageVersion>
 		<_FirebaseMLNaturalLanguageItemsFolder>FMLNtrlL-$(_FirebaseMLKitNaturalLanguageVersion)</_FirebaseMLNaturalLanguageItemsFolder>
 		<_FirebaseMLNaturalLanguageSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLNaturalLanguageItemsFolder)\Frameworks\</_FirebaseMLNaturalLanguageSDKBaseFolder>
-		
 		<_FirebaseMLNLLanguageIDItemsFolder>FMLNLLngI-$(_FirebaseMLKitNaturalLanguageVersion)</_FirebaseMLNLLanguageIDItemsFolder>
 		<_FirebaseMLNLLanguageIDSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLNLLanguageIDItemsFolder)\Frameworks\</_FirebaseMLNLLanguageIDSDKBaseFolder>
-		
 		<_FirebaseMLNLSmartReplyItemsFolder>FMLNLSmrtR-$(_FirebaseMLKitNaturalLanguageVersion)</_FirebaseMLNLSmartReplyItemsFolder>
 		<_FirebaseMLNLSmartReplySDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLNLSmartReplyItemsFolder)\</_FirebaseMLNLSmartReplySDKBaseFolder>
-		
 		<_FirebaseMLNLTranslateItemsFolder>FMLNLTrnslt-$(_FirebaseMLKitNaturalLanguageVersion)</_FirebaseMLNLTranslateItemsFolder>
 		<_FirebaseMLNLTranslateSDKBaseFolder>$(XamarinBuildDownloadDir)$(_FirebaseMLNLTranslateItemsFolder)\</_FirebaseMLNLTranslateSDKBaseFolder>
 	</PropertyGroup>
 	<ItemGroup Condition="('$(OutputType)'!='Library' OR '$(IsAppExtension)'=='True')">
 		<XamarinBuildDownload Include="$(_FirebaseMLNaturalLanguageItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/ef4c16bba4cd2765/FirebaseMLNaturalLanguage-0.16.3.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/7dc8c16825e1eafb/FirebaseMLNaturalLanguage-0.17.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_FirebaseMLNaturalLanguageSDKBaseFolder)FirebaseMLNaturalLanguage.framework">
-			<Kind>Framework</Kind>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC</LinkerFlags>
-			<Frameworks>Foundation</Frameworks>
-		</NativeReference>
-		
 		<XamarinBuildDownload Include="$(_FirebaseMLNLLanguageIDItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/871f283f3de2e37b/FirebaseMLNLLanguageID-0.16.3.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/525b910337f728f0/FirebaseMLNLLanguageID-0.17.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_FirebaseMLNLLanguageIDSDKBaseFolder)FirebaseMLNLLanguageID.framework">
-			<Kind>Framework</Kind>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC -lc++</LinkerFlags>
-			<Frameworks>Foundation</Frameworks>
-		</NativeReference>
-		
 		<XamarinBuildDownload Include="$(_FirebaseMLNLSmartReplyItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/7d3fa69c061b1370/FirebaseMLNLSmartReply-0.16.3.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/3e5741543602cc77/FirebaseMLNLSmartReply-0.17.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_FirebaseMLNLSmartReplySDKBaseFolder)Frameworks\FirebaseMLNLSmartReply.framework">
-			<Kind>Framework</Kind>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC -lc++</LinkerFlags>
-			<Frameworks>Foundation</Frameworks>
-		</NativeReference>
-		
 		<XamarinBuildDownload Include="$(_FirebaseMLNLTranslateItemsFolder)">
-			<Url>https://dl.google.com/dl/cpdc/ee627a903e191d0f/FirebaseMLNLTranslate-0.16.3.tar.gz</Url>
+			<Url>https://dl.google.com/dl/cpdc/b09b22f0bb7acf83/FirebaseMLNLTranslate-0.17.0.tar.gz</Url>
 			<Kind>Tgz</Kind>
 		</XamarinBuildDownload>
-		<NativeReference Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Frameworks\FirebaseMLNLTranslate.framework">
-			<Kind>Framework</Kind>
-			<ForceLoad>True</ForceLoad>
-			<LinkerFlags>-ObjC -lc++ -lz</LinkerFlags>
-			<Frameworks>Foundation</Frameworks>
-		</NativeReference>
-		
 		<XamarinBuildRestoreResources Include="_FirebaseMLKitNaturalLanguageItems"/>
 	</ItemGroup>
 	
 	<Target Name="_FirebaseMLKitNaturalLanguageItems">
 		<ItemGroup>
-			<RestoreAssemblyResource Include="$(_FirebaseMLNLSmartReplySDKBaseFolder)Resources\PredictOnDeviceResource\hobbes.tflite">
-				<LogicalName>__monotouch_content_PredictOnDeviceResource.bundle_fhobbes.tflite</LogicalName>
-				<AssemblyName>$(_FirebaseMLKitNaturalLanguageAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FirebaseMLNLSmartReplySDKBaseFolder)Resources\PredictOnDeviceResource\sensitive_model_020817.pb">
-				<LogicalName>__monotouch_content_PredictOnDeviceResource.bundle_fsensitive__model__020817.pb</LogicalName>
-				<AssemblyName>$(_FirebaseMLKitNaturalLanguageAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Resources\FirebaseMLNLTranslate_resource\generated_rapid_response_client_defaults.json">
-				<LogicalName>__monotouch_content_FirebaseMLNLTranslate__resource.bundle_fgenerated__rapid__response__client__defaults.json</LogicalName>
-				<AssemblyName>$(_FirebaseMLKitNaturalLanguageAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Resources\FirebaseMLNLTranslate_resource\icudt64l.dat">
-				<LogicalName>__monotouch_content_FirebaseMLNLTranslate__resource.bundle_ficudt64l.dat</LogicalName>
-				<AssemblyName>$(_FirebaseMLKitNaturalLanguageAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
-			<RestoreAssemblyResource Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Resources\FirebaseMLNLTranslate_resource\profiles_r28.json">
-				<LogicalName>__monotouch_content_FirebaseMLNLTranslate__resource.bundle_fprofiles__r28.json</LogicalName>
-				<AssemblyName>$(_FirebaseMLKitNaturalLanguageAssemblyName)</AssemblyName>
-			</RestoreAssemblyResource>
+			<!-- From https://dl.google.com/dl/cpdc/7dc8c16825e1eafb/FirebaseMLNaturalLanguage-0.17.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseMLNaturalLanguageSDKBaseFolder)FirebaseMLNaturalLanguage.framework">
+				<Kind>Framework</Kind>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-ObjC</LinkerFlags>
+				<Frameworks>Foundation</Frameworks>
+			</NativeReference>
+
+			<!-- From https://dl.google.com/dl/cpdc/525b910337f728f0/FirebaseMLNLLanguageID-0.17.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseMLNLLanguageIDSDKBaseFolder)FirebaseMLNLLanguageID.framework">
+				<Kind>Framework</Kind>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-ObjC -lc++</LinkerFlags>
+				<Frameworks>Foundation</Frameworks>
+			</NativeReference>
+
+			<!-- From https://dl.google.com/dl/cpdc/3e5741543602cc77/FirebaseMLNLSmartReply-0.17.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseMLNLSmartReplySDKBaseFolder)Frameworks\FirebaseMLNLSmartReply.framework">
+				<Kind>Framework</Kind>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-ObjC -lc++</LinkerFlags>
+				<Frameworks>Foundation</Frameworks>
+			</NativeReference>
+			<BundleResource Include="$(_FirebaseMLNLSmartReplySDKBaseFolder)Resources\PredictOnDeviceResource\hobbes.tflite" Visible="False">
+				<LogicalName>PredictOnDeviceResource.bundle\hobbes.tflite</LogicalName>
+			</BundleResource>
+			<BundleResource Include="$(_FirebaseMLNLSmartReplySDKBaseFolder)Resources\PredictOnDeviceResource\sensitive_model_020817.pb" Visible="False">
+				<LogicalName>PredictOnDeviceResource.bundle\sensitive_model_020817.pb</LogicalName>
+			</BundleResource>
+
+			<!-- From https://dl.google.com/dl/cpdc/b09b22f0bb7acf83/FirebaseMLNLTranslate-0.17.0.tar.gz -->
+			<NativeReference Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Frameworks\FirebaseMLNLTranslate.framework">
+				<Kind>Framework</Kind>
+				<ForceLoad>True</ForceLoad>
+				<LinkerFlags>-ObjC -lc++ -lz</LinkerFlags>
+				<Frameworks>Foundation</Frameworks>
+			</NativeReference>
+			<BundleResource Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Resources\FirebaseMLNLTranslate_resource\generated_rapid_response_client_defaults.json" Visible="False">
+				<LogicalName>FirebaseMLNLTranslate_resource.bundle\generated_rapid_response_client_defaults.json</LogicalName>
+			</BundleResource>
+			<BundleResource Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Resources\FirebaseMLNLTranslate_resource\icudt64l.dat" Visible="False">
+				<LogicalName>FirebaseMLNLTranslate_resource.bundle\icudt64l.dat</LogicalName>
+			</BundleResource>
+			<BundleResource Include="$(_FirebaseMLNLTranslateSDKBaseFolder)Resources\FirebaseMLNLTranslate_resource\profiles_r28.json" Visible="False">
+				<LogicalName>FirebaseMLNLTranslate_resource.bundle\profiles_r28.json</LogicalName>
+			</BundleResource>
 		</ItemGroup>
 	</Target>
 </Project>
